Additional text on eigenimages. Deleted two text images.

--- a/text/imgPCA.bib
+++ b/text/imgPCA.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Roberto Stelling at 2018-02-09 17:07:50 -0200 
+%% Created for Roberto Stelling at 2018-02-11 13:35:30 -0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{sirovich1987low,
+	Author = {Sirovich, Lawrence and Kirby, Michael},
+	Date-Added = {2018-02-11 15:35:14 +0000},
+	Date-Modified = {2018-02-11 15:35:24 +0000},
+	Journal = {Josa a},
+	Keywords = {Eigenfaces},
+	Number = {3},
+	Pages = {519--524},
+	Publisher = {Optical Society of America},
+	Title = {Low-dimensional procedure for the characterization of human faces},
+	Volume = {4},
+	Year = {1987}}
 
 @article{krizhevsky2009learning,
 	Author = {Krizhevsky, Alex and Hinton, Geoffrey},
