Correct caption for figure 1

--- a/text/imgPCA.tex
+++ b/text/imgPCA.tex
@@ -142,7 +142,7 @@ If we were to use a rule similar to Kaiser's Rule\footnote{Eigenvalues greater t
 \begin{center}
 \includegraphics[width=\textwidth]{imgPca.png}
 \end{center}
-\caption{ImgPCA screenshot with a signature $eigenvalues \times \#of components$ curve.}
+\caption{ImgPCA screenshot with a typical \emph{$log_{10}$ eigenvalues $\times$ \#of components} curve.}
 \end{figure}
 Note that the Kaiser's Rule cut occurs exactly where the graph crosses $0$ ($\log_{10} eigenvalue = 0$) and that our "\emph{One Tenth Kaiser's Rule}" occurs when $\log_{10} eigenvalue = -1$.
 \section{ImgPCA}
