--- a/text/imgPCA.bib
+++ b/text/imgPCA.bib
@@ -1,12 +1,54 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Roberto Stelling at 2018-02-11 13:35:30 -0200 
+%% Created for Roberto Stelling at 2018-02-15 12:41:50 -0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{Sapuan:2017aa,
+	Author = {Fazli Sapuan and Robert Plummer},
+	Date-Added = {2018-02-15 14:38:06 +0000},
+	Date-Modified = {2018-02-15 14:41:38 +0000},
+	Keywords = {GPU, JavaScript},
+	Lastchecked = {02/15/2018},
+	Month = {December},
+	Title = {GPU Accelerated JavaScript},
+	Url = {http://gpu.rocks/},
+	Urldate = {02/15/2018},
+	Year = {2017}}
+
+@url{Eaton:2018aa,
+	Author = {John W. Eaton},
+	Date-Added = {2018-02-15 14:30:36 +0000},
+	Date-Modified = {2018-02-15 14:31:55 +0000},
+	Keywords = {GNU, Octave},
+	Lastchecked = {02/15/2018},
+	Title = {GNU Octave},
+	Url = {https://www.gnu.org/software/octave/},
+	Year = {2018}}
+
+@url{Loisel:2012aa,
+	Author = {S{\'e}bastien Loisel},
+	Date-Added = {2018-02-15 14:22:16 +0000},
+	Date-Modified = {2018-02-15 14:24:29 +0000},
+	Keywords = {SVD, JavaScript},
+	Title = {Numeric Javascript},
+	Url = {http://www.numericjs.com/},
+	Urldate = {15/02/2018},
+	Year = {2012}}
+
+@url{ITU-R:2015aa,
+	Author = {International Telecommunication Union},
+	Date-Added = {2018-02-15 14:09:02 +0000},
+	Date-Modified = {2018-02-15 14:17:38 +0000},
+	Keywords = {ITU-R},
+	Month = {06},
+	Title = {Reccomendation ITU-R BT.709-6},
+	Url = {http://www.itu.int/rec/R-REC-BT.709-6-201506-I/en},
+	Year = {2015}}
 
 @article{sirovich1987low,
 	Author = {Sirovich, Lawrence and Kirby, Michael},
@@ -55,13 +97,14 @@
 	Year = {1988}}
 
 @url{Stelling:aa,
-	Author = {ImgPCA-GitHub},
+	Author = {Roberto Stelling},
 	Date-Added = {2018-02-06 20:50:34 +0000},
-	Date-Modified = {2018-02-06 21:23:12 +0000},
+	Date-Modified = {2018-02-15 14:19:42 +0000},
 	Keywords = {PCA, Github},
 	Lastchecked = {02/06/2018},
-	Title = {https://github.com/RobStelling/imgPca},
-	Urldate = {2018}}
+	Url = {https://github.com/RobStelling/imgPca},
+	Urldate = {2018},
+	Year = {2018}}
 
 @incollection{craw1992face,
 	Author = {Craw, Ian and Cameron, Peter},
